<resources>
    <string name="app_name">RechargeLibrary</string>
    <string name="hello_world">Hello world!</string>
    <string name="lntsdk_title_sh">刷刷手环</string>
    <string name="lntsdk_query_hint">正在查询请稍后...</string>
    <string name="lntsdk_now_query">正在查询</string>
    <string name="lntsdk_now_recharge">正在充值</string>
    <string name="lntsdk_online_recharge">在线充值</string>
    <string name="lntsdk_order_add_recharge">订单补充</string>
    <string name="lntsdk_warm_prompt">温馨提示：</string>
    <string name="lntsdk_warm_prompt_one">1、充值过程中如出现已扣费但未能充值成功的情况可以在订单补充中进行查询补充；</string>
    <string name="lntsdk_warm_prompt_two">2、订单补充按钮中显示“</string>
    <string name="lntsdk_warm_prompt_three">”时表示有补充订单。</string>
    <string name="lntsdk_nfc_warm_prompt_one">1、请开启手机NFC功能并把卡片放在手机背面NFC感应区</string>
    <string name="lntsdk_nfc_warm_prompt_two">2、充值过程中请不要移开卡片。</string>
    <string name="lntsdk_nfc_recharge_hint_one">1、充值过程中请不要移开卡片；</string>
    <string name="lntsdk_nfc_recharge_hint_two">2、充值过程中如出现已扣费但未能充值成功的情况可以在订单补充中进行查询补充。</string>
    <string name="lntsdk_nfc_recharge_hint_three">3、订单补充按钮中显示“</string>
    <string name="lntsdk_nfc_recharge_hint_four">”时表示有补充订单。</string>
    <string name="lntsdk_bluetooth_recharge_hint_one">1、充值过程中请保持手机蓝牙开启；</string>
    <string name="lntsdk_bluetooth_recharge_hint_two">2、充值过程中请保持手机网络稳定及手环电量充足。</string>
    <string name="lntsdk_order_record_null">查询不到已支付的订单</string>
    <string name="lntsdk_choise_recharge_money">请在下方选择充值金额</string>
    <string name="lntsdk_recharge_unit">元</string>
    <string name="lntsdk_btn_recharge">充    值</string>
    <string name="lntsdk_copyright_one">Copyright © 2012-2017 广东岭南通股份有限公司</string>
    <string name="lntsdk_copyright_two">http://www.lingnanpass.com/</string>
    <string name="lntsdk_dialog_opennfc_title">请先打开NFC功能</string>
    <string name="lntsdk_dialog_opennfc_one">NFC关闭的情况下不能识别卡片</string>
    <string name="lntsdk_dialog_opennfc_two">NFC</string>
    <string name="lntsdk_dialog_opennfc_three">允许手机在接触其他设备时交换数据</string>
    <string name="lntsdk_dialog_opennfc_four">勾选此处</string>
    <string name="lntsdk_dialog_opennfc_five">进入设置页面</string>
    <string name="lntsdk_order_recharge_fail">订单未支付成功</string>
    <string name="lntsdk_btn_return">返回</string>
    <string name="lntsdk_record_now">正在查询...</string>
    <string name="lntsdk_loading">加载中...</string>
    <string name="lntsdk_order_num">订单号：</string>
    <string name="lntsdk_order_state">未充值</string>
    <string name="lntsdk_order_btn_add_recharge">补充</string>
    <string name="lntsdk_refresh_header">重新连接</string>
    <string name="lntsdk_recharge_success">充值成功</string>
    <string name="lntsdk_verify_return">确认返回</string>
    <string name="lntsdk_connect_dialog_hint">温馨提示</string>
    <string name="lntsdk_connect_dialog_text">您的手环是否已经点亮?</string>
    <string name="lntsdk_connect_dialog_btn_yes">是</string>
    <string name="lntsdk_connect_dialog_btn_no">否</string>
    <string name="lntsdk_connect_dialog_btn_return">返回</string>
    <string name="lntsdk_complaint_search">搜索</string>
    <string name="lntsdk_complaint">客服投诉</string>
    <string name="lntsdk_complaint_submit">投诉提交</string>
    <string name="lntsdk_complaint_query">投诉查询</string>
    <string name="lntsdk_complaint_submit_success">您的投诉已提交成功，工作人员会在7个工作日内尽快处理，在此期间您可以正常使用，谢谢！</string>
    <string name="lntsdk_toast_nfc">NFC未连接请把卡片放在感应区</string>
    <string name="lntsdk_nfc_error">该机型不支持此卡！</string>
    <string name="lntsdk_nfc_tip">请把卡片放在感应区！</string>
    <string name="lntsdk_interface_return">连接方式参数错误</string>
    <string name="lntsdk_now_connection_sh">正在连接手环</string>
    <string name="lntsdk_now_loading">正在加载中</string>
    <string name="lntsdk_connection_hint">您的手环是否已经点亮?</string>
    <string name="lntsdk_connection_timeout">连接超时是否重新连接?</string>
    <string name="lntsdk_connection_fail">手环连接失败</string>
    <string name="lntsdk_vesion_to_low">此功能要求 Android 4.3以上版本</string>
    <string name="lntsdk_no_bludtooth">该设备不支持蓝牙</string>
    <string name="lntskd_bludtooth_sh_start">刷刷手环充值必须开启手机蓝牙，是否允许？</string>
    <string name="lntskd_bludtooth_wq_start">握奇手环充值必须开启手机蓝牙，是否允许？</string>
    <string name="lntsdk_no_nfc">当前设备不支持NFC功能</string>
    <string name="lntsdk_rechargeing_nfc">充值过程中请不要移开卡片</string>
    <string name="lntsdk_order_noquery">尚未查到补充订单请充值</string>
    <string name="lntsdk_open_sh_fail">上电失败请重试</string>
    <string name="lntsdk_order_no_pay">订单未支付成功!</string>
    <string name="lntsdk_recharge_fail_order_recharge">充值失败请在订单补充中进行充值!</string>
    <string name="lntsdk_recharge_fail_complaint">充值失败！您可以进行投诉客服人员会尽快帮您处理!</string>
    <string name="lntsdk_now_no_record">暂无记录</string>
    <string name="lntsdk_code_fail">验证码错误</string>
    <string name="lntsdk_write_code">请输入验证码</string>
    <string name="lntsdk_choise_query_type">请选择查询订单类型</string>
    <string name="lntsdk_choise_query_month">请选择查询月份</string>
    <string name="lntsdk_paycontrol_version_fail">支付控件版本号查询失败请重试...</string>
    <string name="lntsdk_connect_card_no">卡号: </string>
    <string name="lntsdk_connect_reconnect">手环已解除绑定请重新连接</string>
    <string name="lntsdk_connect_device_name">设备名称: </string>
    <string name="lntsdk_connect_watch_not_connect_open_watch_app">握奇手环未连接,是否打开握奇穿戴APP连接手环?</string>
    <string name="lntsdk_connect_watch_connect_fail_open_watch_app">握奇手环连接失败，是否重新连接?</string>
    <string name="lntsdk_connect_watch_install_already">您是否已经成功安装握奇穿戴APP?</string>
    <string name="lntsdk_connect_nfc_charge">NFC充值</string>
    <string name="lntsdk_connect_watch">握奇手环</string>
    <string name="lntsdk_connect_smart_band">手环充值</string>
    <string name="lntsdk_connect_device_no_not_null">设备号不能为空</string>
    <string name="lntsdk_connect_inner_card_charge">内卡充值</string>
    <string name="lntsdk_connect_register_succ">认证成功</string>
    <string name="lntsdk_connect_register_fail">认证失败</string>
    <string name="lntsdk_connect_read_card_no_fail">读取卡号失败</string>
    <string name="lntsdk_connect_sh_battery_low">手环电量过低请充电后重试</string>
    <string name="lntsdk_connect_power_on_fail">上电失败，重新上电</string>
    <string name="lntsdk_connect_watch_connect_fail">握奇手环连接失败</string>
    <string name="lntsdk_connect_now_open_bt">正在开启蓝牙</string>
    <string name="lntsdk_connect_not_support_nfc">当前设备不支持NFC功能</string>
    <string name="lntsdk_connect_fail">连接失败</string>
    <string name="lntsdk_connect_sh_fail">连接手环失败</string>
    <string name="lntsdk_connect_sh_connect_fail_retry">手环连接失败是否重连</string>
    <string name="lntsdk_connect_sh_get_battery_fail">手环电量获取失败</string>
    <string name="lntsdk_charge_wait">请稍候...</string>
    <string name="lntsdk_charge_donot_move_away">请勿移开卡片</string>
    <string name="lntsdk_charge_platform_error">平台数据出错</string>
    <string name="lntsdk_charge_not_support">此手机暂不支持该功能</string>
    <string name="lntsdk_charge_power_up_fail">上电失败</string>
    <string name="lntsdk_charge_power_up_fail_linklove">连爱手环上电失败</string>
    <string name="lntsdk_charge_sh_differ">连接的该手环与补充订单卡号不一致请解绑后重新连接</string>
    <string name="lntsdk_charge_cardno_differ">此卡与补充订单卡号不一致请更换卡片</string>
    <string name="lntsdk_charge_charging">正在充值</string>
    <string name="lntsdk_charge_charging_donot_move_away">充值过程中请不要移开卡片</string>
    <string name="lntsdk_recharge_order_pay_success">支付成功</string>
    <string name="lntsdk_recharge_open_nfc">请开启NFC功能</string>
    <string name="lntsdk_recharge_data_error">平台数据出错，请稍候再试</string>
    <string name="lntsdk_recharge_addrecharge_error">补充过程中请不要移开卡片</string>
    <string name="lntsdk_recharge_cardid_no">此卡与补充订单卡号不一致请更换卡片</string>
    <string name="lntsdk_recharge_read_cardid_fail">读取卡号失败</string>
    <string name="lntsdk_recharge_order_pay_fail">支付失败</string>
    <string name="lntsdk_recharge_watch_send_fail">手环数据传输失败请重试</string>
    <string name="lntsdk_person_register_title">用户注册</string>
    <string name="lntsdk_person_register_phone_hint">请输入手机号码</string>
    <string name="lntsdk_person_register_user_name_hint">用&#160;&#160;户&#160;&#160;名：</string>
    <string name="lntsdk_person_register_password_hint">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="lntsdk_person_register_sure_password_hint">确认密码：</string>
    <string name="lntsdk_person_register_btn_get_check_code">获取验证码</string>
    <string name="lntsdk_person_register_check_code">验&#160;&#160;证&#160;&#160;码：</string>
    <string name="lntsdk_person_register_btn_register">提&#160;&#160;交</string>
    <string name="lntsdk_person_register_phone">手&#160;&#160;机&#160;&#160;号：</string>
    <string name="lntsdk_person_register_btn_after_second_get_check_code">秒)后获取验证码</string>
    <string name="lntsdk_person_register_msg_already_exists">注册失败:账号已存在</string>
    <string name="lntsdk_person_register_msg_success">注册成功</string>
    <string name="lntsdk_person_register_now">正在注册...</string>
    <string name="lntsdk_person_login_title">用户登陆</string>
    <string name="lntsdk_person_login_message">您还没有登录哦~</string>
    <string name="lntsdk_person_login_pass">密&#160;&#160;&#160;&#160;码：</string>
    <string name="lntsdk_person_login_account">用户名：</string>
    <string name="lntsdk_person_login_pass_null_error">密码不能为空</string>
    <string name="lntsdk_person_login_btn">登&#160;&#160;录</string>
    <string name="lntsdk_person_login_forget_pass">忘记密码</string>
    <string name="lntsdk_person_login_register">注&#160;册</string>
    <string name="lntsdk_forget_password_title">忘记密码</string>
    <string name="lntsdk_forget_password_user_hint">请输入用户名</string>
    <string name="lntsdk_forget_password_check_code_hint">输入验证码</string>
    <string name="lntsdk_forget_password_get_check">获取验证码</string>
    <string name="lntsdk_forget_password_password_hint">输入新密码</string>
    <string name="lntsdk_forget_password_sure_password_hint">确认新密码</string>
    <string name="lntsdk_forget_password_update_pass">提&#160;&#160;交</string>
    <string name="lntsdk_update_password_title">修改密码</string>
    <string name="lntsdk_update_password_old_pass">原始密码</string>
    <string name="lntsdk_update_password_new_pass">新密码</string>
    <string name="lntsdk_update_password_sure_pass">确认密码</string>
    <string name="lntsdk_update_password_update">修改</string>
    <string name="lntsdk_update_password_username_null_error">用户名不能为空</string>
    <string name="lntsdk_update_password_old_pass_null_error">旧密码不能为空</string>
    <string name="lntsdk_update_password_new_pass_null_error">新密码不能为空</string>
    <string name="lntsdk_update_password_sure_pass_null_error">确认密码不能为空</string>
    <string name="lntsdk_net_work_not_use">当前网络不可用</string>
    <string name="lntsdk_user_name_null_error">用户名必须填写</string>
    <string name="lntsdk_user_name_wrongful_error">用户名必须以字母开头，只能包含数字和字母且长度为6-16之间</string>
    <string name="lntsdk_password_null_error">密码必须填写</string>
    <string name="lntsdk_password_wrongful_error">密码只能包含数字和字母且长度在6-50之间</string>
    <string name="lntsdk_sure_password_null_error">确认密码必须填写</string>
    <string name="lntsdk_both_password_not_equal_error">两次填写的密码不一致</string>
    <string name="lntsdk_phone_null_error">手机号必须填写</string>
    <string name="lntsdk_phone_wrongful_error">手机号不正确</string>
    <string name="lntsdk_code_null_error">验证码必须填写</string>
    <string name="lntsdk_date_get_fail">获取数据失败</string>
    <string name="lntsdk_code_clicks_more">获取验证码次数频繁</string>
    <string name="lntsdk_sure_password_wrongful_error">确认密码只能包含数字和字母且长度在6-50之间</string>
    <string name="lntsdk_check_user_name">^[a-zA-Z]+[a-zA-Z0-9]{5,17}$</string>
    <string name="lntsdk_check_password">^[a-zA-Z0-9]{6,50}$</string>
    <string name="lntsdk_check_phone_number">^((13[0-9])|(15[0-3,5-9])|(18[0-9])|(17[6-8])|(14[5,7]))\\d{8}$</string>
    <string name="lntsdk_method_register">register</string>
    <string name="lntsdk_method_login">login</string>
    <string name="lntsdk_method_get_check_code">getCheckCode</string>
    <string name="lntsdk_method_forget_pass">forgetPassword</string>
    <string name="lntsdk_method_update_pass">changePassword</string>
</resources>