<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/lntsdk_bg_dialog_black"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/lntsdk_connect_dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/lntsdk_connect_dialog_hint"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dp"
        
        />
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        ></LinearLayout>
    <TextView 
        android:id="@+id/lntsdk_connect_dialog_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/lntsdk_connect_dialog_text"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:layout_margin="20dp"
        />
    <LinearLayout 
        android:id="@+id/lntsdk_connect_dialog_progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        >
    <include layout="@layout/lntsdk_progress"/>
    </LinearLayout>
    
    <EditText 
        android:id="@+id/lntsdk_connect_input_mac"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="设备号每两位中间以':'号隔开"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        />
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        >
    <LinearLayout 
        android:id="@+id/lntsdk_connect_layout_return"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone"
        >
        <Button 
            android:id="@+id/lntsdk_connect_dialog_return"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@drawable/lntsdk_background_dialog_btn"
            android:text="@string/lntsdk_connect_dialog_btn_return"
            android:textColor="#ffffff"
            />
        
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/lntsdk_connect_layout_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:visibility="visible"
        >
        <Button 
            android:id="@+id/lntsdk_connect_dialog_positive"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@drawable/lntsdk_background_dialog_btn"
            android:text="@string/lntsdk_connect_dialog_btn_yes"
            android:textColor="#ffffff"
            />
        <Button 
            android:id="@+id/lntsdk_connect_dialog_negative"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@drawable/lntsdk_background_dialog_btn"
            android:text="@string/lntsdk_connect_dialog_btn_no"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffff"
            />
        
    </LinearLayout>
    </RelativeLayout>

</LinearLayout>
