<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/lntsdk_aqa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lntsdk_recharge_success"
                android:textColor="#666666"
                android:textSize="26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lntsdk_cz_ok_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lntsdk_order_num"
                android:textColor="#666666"
                android:textSize="18sp" />

            
            <TextView
                android:id="@+id/lntsdk_cz_ok_cardid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#666666"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:text="卡    号：" />

            <TextView
                android:id="@+id/lntsdk_cz_ok_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="金    额："
                android:textColor="#666666"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lntsdk_cz_ok_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#666666"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:text="余    额：" />

        </LinearLayout>

        <Button
            android:id="@+id/lntsdk_cz_ok_button"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/lntsdk_lan_cheng_o"
            android:text="@string/lntsdk_verify_return"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>
    <include layout="@layout/lntsdk_bottom"/>

</RelativeLayout>